--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@ body{
     color: #FFFABF;
     text-align: center;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 10;
+}
