--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-    background-color: #292c35;
+    /* background-color: #292c35; */
 }
 .heading1{
-    color: #FFFABF;
+    /* color: #FFFABF; */
     text-align: center;
     text-decoration: underline;
     text-shadow: white;
